syntax = "proto2";
package eos.auth;

import "XrdOucErrInfo.proto";
import "XrdSecEntity.proto";

//------------------------------------------------------------------------------
// Mkdir request protocol buffer message 
//------------------------------------------------------------------------------

message MkdirProto {
  required string path = 1;
  required int64 mode = 2;
  required XrdOucErrInfoProto error = 3;
  required XrdSecEntityProto client = 4;
  optional string opaque = 5 [default = ""];
}
