// ----------------------------------------------------------------------------
// File: Version.proto
// Author: Ivan Arizanovic <ivan.arizanovic@comtrade.com>
// ----------------------------------------------------------------------------

syntax="proto3";

package eos.console;

option go_package = "eos.rest.gateway.service";

message VersionProto {
  bool features   = 1;
  bool monitoring = 2;
}
