// ----------------------------------------------------------------------------
// File: Who.proto
// Author: Ivan Arizanovic <ivan.arizanovic@comtrade.com>
// ----------------------------------------------------------------------------

syntax="proto3";

package eos.console;

option go_package = "eos.rest.gateway.service";

message WhoProto {
  bool showclients = 1;
  bool showauth    = 2;
  bool showall     = 3;
  bool showsummary = 4;
  bool monitoring  = 5;
}
